# epoch-engine

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  run_trainer.py
.github/workflows/: ci.yml  publish.yml
epoch_engine/: __init__.py
epoch_engine/core/: __init__.py  callbacks.py  checkpoint_handler.py  configs.py  logger.py  metrics_tracker.py  plotting.py  trainer.py  types.py
epoch_engine/core/managers/: __init__.py  device_manager.py  run_manager.py
epoch_engine/core/metrics/: __init__.py  display.py  metrics_logger.py  metrics_plotter.py  metrics_tracker.py
epoch_engine/models/: __init__.py  architectures.py
tests/: test_callbacks.py  test_configs.py  test_logger.py  test_managers.py  test_metrics.py  test_metrics_logger_plotter.py  test_models.py  test_trainer.py
